infra/k8s/app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-depl
  namespace: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
    template:
      metadata:
        labels:
          app: app
      spec:
        containers:
          - name: app
            image: pprob/zenlife
