infra/k8s/app-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-srv
spec:
  selector:
    app: app
  ports:
    - name: app
      protocol: TCP
      port: 3000
      targetPort: 3000
