infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1betav1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: zenlife.dev
      http:
        paths:
          - backend:
              serviceName: app-srv
              servicePort: 3000
